2006-03-29  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc (wait_for_sigthread): Use the current user sid when
	setting up the signal pipe rather than relying on (eventually) the
	effective sid.

2006-03-29  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (child_info_fork::handle_fork): Set uid/gid in myself so
	that it can be used by subsequent startup functions.
	(dll_crt0_0): Issue a warning if DuplicateTokenEx fails and DEBUGGING.
	(dll_crt0_1): Move user_data->{resourcelocks,threadinterface}
	initialization here from dll_crt0_0.
	* fork.cc (frok::child): Tell wait_for_sigthread that this is fork.
	(frok::parent): Only initialize start_time once.  Tighten time when
	we're "deimpersonated".
	* sigproc.cc (signal_fixup_after_exec): Rework (futiley) sa_buf stuff.
	Add debugging output.
	(wait_for_sigthread): Accept an argument which illustrates whether we
	are forked or not.
	(wait_sig): Avoid using myself pointer.
	* winsup.h ((wait_for_sigthread): Reflect change to argument.

2006-03-26  Christopher Faylor  <cgf@timesys.com>

	* spawn.cc (spawn_guts): Close handles if we know that we will not be
	seeing a sync event from the child.

2006-03-26  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc (wait_sig): Move myself manipulation...
	(wait_for_sigthread): ...to here.

2006-03-24  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_floppy.cc: Include ntdef.h and ntdll.h.
	(fhandler_dev_floppy::get_drive_info): Rearrange so that now
	NtQueryVolumeInformationFile is called on drives which don't support
	IOCTL_DISK_GET_DRIVE_GEOMETRY.
	* ntdll.h (struct _FILE_FS_SIZE_INFORMATION): Add.
	(enum _FSINFOCLASS): Add missing values.

2006-03-23  Christopher Faylor  <cgf@timesys.com>

	* fhandler_console.cc (fhandler_console::fixup_after_fork_exec): Make
	error message more explicit.
	* pinfo.cc (_pinfo::commune_request): Don't lock process unless we're
	looking for fifos.

2006-03-23  Christopher Faylor  <cgf@timesys.com>
